force-app/main/default/objects/LLC_BI__DocType__c/LLC_BI__DocType__c.object-meta.xml
<CustomObject>
    <label>DocType</label>
    <nameField>
        <label>Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocTypes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>