force-app/main/default/objects/LLC_BI__DocType__c/fields/LLC_BI__Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Description__c</fullName>
    <description>This field is optional and provides a space to describe the category.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>