force-app/main/default/objects/LLC_BI__DocType__c/fields/LLC_BI__docManager__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__docManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is not required, but an admin must populate it for the category to appear in classic Document Manager. This field associates a DocType (category) with a specific DocManager record.</description>
    <label>DocManager</label>
    <referenceTo>LLC_BI__DocManager__c</referenceTo>
    <relationshipLabel>DocTypes</relationshipLabel>
    <relationshipName>DocTypes</relationshipName>
    <type>Lookup</type>
</CustomField>