force-app/main/default/objects/LLC_BI__DocType__c/fields/LLC_BI__docTab__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__docTab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is not required, but an admin must populate it for the category to appear under a tab in Classic DocMan. This field associates a DocType (category) with a specific DocTab record.</description>
    <label>DocTab</label>
    <referenceTo>LLC_BI__DocTab__c</referenceTo>
    <relationshipLabel>DocTypes</relationshipLabel>
    <relationshipName>DocTypes</relationshipName>
    <type>Lookup</type>
</CustomField>